Configuration site b2b en static

--- a/Web-public/www/public/index.html
+++ b/Web-public/www/public/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 	<meta charset="utf-8">
-	<title>WoodyToys</title>
+	<title>WoodyToys public</title>
 </head>
 <body>
 	<h1>Site public de woodytoys</h1>
